--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 Django==1.9.4
 Djax==0.8.6
+Sharrock-Client==0.7.4.1
+boto==2.39.0
+dj-database-url==0.4.0
+django-storages==1.4
+psycopg2==2.6.1
 python-dateutil==2.5.0
 requests==2.9.1
-Sharrock-Client==0.7.4.1
 six==1.10.0
+wsgiref==0.1.2
