--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ Sharrock-Client==0.7.4.1
 boto==2.39.0
 dj-database-url==0.4.0
 django-storages==1.4
+gevent==1.0.2
+greenlet==0.4.9
+gunicorn==19.3.0
 psycopg2==2.6.1
 python-dateutil==2.5.0
 requests==2.9.1
